--- a/NodeGraph/Dock.xaml
+++ b/NodeGraph/Dock.xaml
@@ -1,12 +1,13 @@
-﻿<Border x:Class="WpfApp2.NodeGraph"
+﻿<Border x:Class="Ogxd.NodeGraph.Dock"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApp2"
-             mc:Ignorable="d" Background="#28303a"
+             xmlns:local="clr-namespace:Ogxd.NodeGraph" MouseLeftButtonDown="Border_MouseLeftButtonDown"
+             MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave"
+             mc:Ignorable="d" Width="16" Height="16" CornerRadius="8" Background="Red" BorderBrush="Black" BorderThickness="2"
              d:DesignHeight="300" d:DesignWidth="300">
-    <Canvas x:Name="canvas">
+    <Grid>
             
-    </Canvas>
+    </Grid>
 </Border>
