--- a/NodeGraph/Node.xaml
+++ b/NodeGraph/Node.xaml
@@ -1,10 +1,10 @@
-﻿<Border x:Class="WpfApp2.Node"
+﻿<Border x:Class="Ogxd.NodeGraph.Node"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApp2"
-             mc:Ignorable="d" Width="300" Height="100"
+             xmlns:local="clr-namespace:Ogxd.NodeGraph"
+             mc:Ignorable="d" Width="250" Height="100"
              CornerRadius="0" Background="#131a24" BorderBrush="Black" BorderThickness="2"
              d:DesignHeight="300" d:DesignWidth="300">
     <!--<Border.Effect>
