--- a/Sample/App.xaml
+++ b/Sample/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfApp2.App"
+﻿<Application x:Class="Ogxd.NodeGraph.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfApp2"
+             xmlns:local="clr-namespace:Ogxd.NodeGraph"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
