--- a/Sample/MainWindow.xaml
+++ b/Sample/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfApp2.MainWindow"
+﻿<Window x:Class="Ogxd.NodeGraph.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp2"
+        xmlns:local="clr-namespace:Ogxd.NodeGraph"
         mc:Ignorable="d"
-        Title="MainWindow"  Width="1000" Height="800">
+        Title="MainWindow" Height="600" Width="1700">
     <Grid>
         
     </Grid>
