--- a/NodeGraph/Node.xaml
+++ b/NodeGraph/Node.xaml
@@ -4,9 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ogxd.NodeGraph"
-             mc:Ignorable="d" Width="250" Height="100"
-             CornerRadius="0" Background="#131a24" BorderBrush="Black" BorderThickness="2"
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d" Width="250" MinHeight="50"
+             CornerRadius="0" Background="#131a24" BorderBrush="White" BorderThickness="0">
     <!--<Border.Effect>
         <DropShadowEffect ShadowDepth="0" BlurRadius="50" />
     </Border.Effect>-->
@@ -19,7 +18,7 @@
         <StackPanel Grid.Column="0" x:Name="stackInputs" Margin="-8,0,0,0" VerticalAlignment="Center">
 
         </StackPanel>
-        <StackPanel Grid.Column="1" x:Name="stackParameters"  VerticalAlignment="Center">
+        <StackPanel Grid.Column="1" x:Name="stackParameters" VerticalAlignment="Center">
 
         </StackPanel>
         <StackPanel Grid.Column="2" x:Name="stackOutputs" Margin="0,0,-8,0" VerticalAlignment="Center">
