--- a/NodeGraph/NodeChest.xaml
+++ b/NodeGraph/NodeChest.xaml
@@ -1,19 +1,12 @@
-﻿<Border x:Class="Ogxd.NodeGraph.NodeGraph"
+﻿<Border x:Class="Ogxd.NodeGraph.NodeChest"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ogxd.NodeGraph"
              mc:Ignorable="d" Background="#28303a"
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Canvas x:Name="canvas" ClipToBounds="True">
-        <Canvas.Background>
-            <ImageBrush
-                ImageSource="Resources\Background.png"
-                TileMode="FlipXY"
-                Viewport="0,0,32,32"
-                ViewportUnits="Absolute"/>
-        </Canvas.Background>
-
-    </Canvas>
+             d:DesignHeight="450" d:DesignWidth="800">
+    <WrapPanel x:Name="wrapPanel">
+            
+    </WrapPanel>
 </Border>
