--- a/Sample/FloatingChest.xaml
+++ b/Sample/FloatingChest.xaml
@@ -1,14 +1,11 @@
-﻿<Border x:Class="Ogxd.NodeGraph.NodeChest"
+﻿<Border x:Class="Ogxd.NodeGraph.FloatingChest"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ogxd.NodeGraph"
-             mc:Ignorable="d" Background="#FFFFFF"
-             d:DesignHeight="450" d:DesignWidth="800">
-    <ScrollViewer HorizontalScrollBarVisibility="Disabled">
-        <WrapPanel x:Name="wrapPanel">
+             Width="330" Height="350"
+             mc:Ignorable="d" Padding="10" CornerRadius="5" Background="White"
+             d:DesignHeight="300" d:DesignWidth="300">
 
-        </WrapPanel>
-    </ScrollViewer>
 </Border>
