--- a/Sample/MainWindow.xaml
+++ b/Sample/MainWindow.xaml
@@ -8,14 +8,9 @@
         Title="MainWindow" Height="600" Width="1700">
     <Grid>
         <Grid x:Name="container">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="2*"/>
-                <RowDefinition Height="5"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch" />
+
         </Grid>
-        <StackPanel VerticalAlignment="Bottom" Orientation="Horizontal">
+        <StackPanel VerticalAlignment="Bottom" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Panel.ZIndex="1000" Width="100" Height="25" Content="Run" Click="runClick"/>
             <Button Panel.ZIndex="1000" Width="100" Height="25" Content="Add" Click="addClick"/>
             <Button Panel.ZIndex="1000" Width="100" Height="25" Content="ReArrange" Click="rearrange"/>
